RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -61,23 +61,39 @@
 	* 즉, reg_date 이 pk 에 포함되어 있지 않아서임
 * 아래와 같이 create ddl 을 변경해 봄
 ```
-	CREATE TABLE tb_article (
-     article_id INT NOT NULL,
-     col1 VARCHAR(45) NULL,
-     reg_date DATETIME NOT NULL,
-     PRIMARY KEY (article_id, reg_date)
-    )
-    PARTITION BY RANGE ( YEAR(reg_date) ) (
-     PARTITION p2009 VALUES LESS THAN (2010),
-     PARTITION p2010 VALUES LESS THAN (2011),
-     PARTITION p2011 VALUES LESS THAN (2012),
-     PARTITION p9999 VALUES LESS THAN MAXVALUE
-    );
+CREATE TABLE tb_article (
+ article_id INT NOT NULL,
+ col1 VARCHAR(45) NULL,
+ reg_date DATETIME NOT NULL,
+ PRIMARY KEY (article_id, reg_date)
+)
+PARTITION BY RANGE ( YEAR(reg_date) ) (
+ PARTITION p2009 VALUES LESS THAN (2010),
+ PARTITION p2010 VALUES LESS THAN (2011),
+ PARTITION p2011 VALUES LESS THAN (2012),
+ PARTITION p9999 VALUES LESS THAN MAXVALUE
+);
 ```
 ![성공](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.08.13.png)
-* 그렇다면 uniqe
+* 그렇다면 unique key 가 있으면서 pk가 아닌 경우는 어떻게 될까
+```
+CREATE TABLE tb_article (
+ article_id INT NOT NULL,
+ col1 VARCHAR(45) NULL,
+ article_id INT NULL,
+ reg_date DATETIME NOT NULL,
+ PRIMARY KEY (article_id, reg_date),
+ UNIQUE KEY (
+)
+PARTITION BY RANGE ( YEAR(reg_date) ) (
+ PARTITION p2009 VALUES LESS THAN (2010),
+ PARTITION p2010 VALUES LESS THAN (2011),
+ PARTITION p2011 VALUES LESS THAN (2012),
+ PARTITION p9999 VALUES LESS THAN MAXVALUE
+);
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ3NjIyNjY0NCw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTEzNjc2NjMzMCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
