RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -80,10 +80,10 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 CREATE TABLE tb_article (
  article_id INT NOT NULL,
  col1 VARCHAR(45) NULL,
- article_id INT NULL,
+ col2 INT NULL,
  reg_date DATETIME NOT NULL,
  PRIMARY KEY (article_id, reg_date),
- UNIQUE KEY (
+ UNIQUE KEY (col2)
 )
 PARTITION BY RANGE ( YEAR(reg_date) ) (
  PARTITION p2009 VALUES LESS THAN (2010),
@@ -92,8 +92,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
  PARTITION p9999 VALUES LESS THAN MAXVALUE
 );
 ```
+![안된다..](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.11.42.png)
+
+> Blockquote
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEzNjc2NjMzMCw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTM5NjcxNDA1MCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
