RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -93,11 +93,27 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 );
 ```
 ![안된다..](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.11.42.png)
-
-> Blockquote
+> ERROR 1503 (HY000): A UNIQUE INDEX must include all columns in the table's partitioning function
+* 이런 에러가 뜨는 걸로 봐서 Unique Index 를 설정하려면 reg_date 도 unique 해야한다는 것을 알 수 있음
+```
+CREATE TABLE tb_article (
+ article_id INT NOT NULL,
+ col1 VARCHAR(45) NULL,
+ col2 INT NULL,
+ reg_date DATETIME NOT NULL,
+ PRIMARY KEY (article_id, reg_date),
+ UNIQUE KEY (col2, reg_date)
+)
+PARTITION BY RANGE ( YEAR(reg_date) ) (
+ PARTITION p2009 VALUES LESS THAN (2010),
+ PARTITION p2010 VALUES LESS THAN (2011),
+ PARTITION p2011 VALUES LESS THAN (2012),
+ PARTITION p9999 VALUES LESS THAN MAXVALUE
+);
+```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM5NjcxNDA1MCw0MTk1ODkzLC0xMDI2ND
-E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
-ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTIwNzMwNTQxNjcsNDE5NTg5MywtMTAyNj
+QxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4
+OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
