--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -111,9 +111,9 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
  PARTITION p9999 VALUES LESS THAN MAXVALUE
 );
 ```
-
+![enter image description here](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.15.30.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNzMwNTQxNjcsNDE5NTg5MywtMTAyNj
-QxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4
-OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbMjEwMjUwODcxMyw0MTk1ODkzLC0xMDI2ND
+E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
+ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
