RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -93,6 +93,7 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 );
 ```
 ![안된다..](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.11.42.png)
+
 > ERROR 1503 (HY000): A UNIQUE INDEX must include all columns in the table's partitioning function
 * 이런 에러가 뜨는 걸로 봐서 Unique Index 를 설정하려면 reg_date 도 unique 해야한다는 것을 알 수 있음
 ```
@@ -111,9 +112,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
  PARTITION p9999 VALUES LESS THAN MAXVALUE
 );
 ```
-![enter image description here](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.15.30.png)
+![성공](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.15.30.png)
+> 참고 
+> ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꿔도 된다. 그러나 이럴 경우 등록일 (reg_date) ㅇ
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwMjUwODcxMyw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTIzNDM4MTcyMCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
