RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -114,10 +114,11 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ```
 ![성공](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.15.30.png)
 > 참고 
-> ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꿔도 된다. 그러나 이럴 경우 등록일 (reg_date) ㅇ
+> ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꾸면 에러가 발생한다
+> 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzNDM4MTcyMCw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTMxNzM5NDc2NSw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
