--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -114,11 +114,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ```
 ![성공](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.15.30.png)
 > 참고 
-> ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꾸면 에러가 발생한다
-> 
-
+> ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꾸면 아래와 같이 위와 동일한 에러가 발생한다
+> ERROR 1503 (HY000): A UNIQUE INDEX must include all columns in the table's partitioning function
+> partition key 는 pk 를 등록하면 pk와 함께 묶여야 하고, unique key 를 등록하면 등록한 unique key 와도 함께 묶여야 하는 걸 잊지 말자
+* 그러면 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMxNzM5NDc2NSw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbLTgwMTMwMjQwMCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
