RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -117,9 +117,25 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 > ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꾸면 아래와 같이 위와 동일한 에러가 발생한다
 > ERROR 1503 (HY000): A UNIQUE INDEX must include all columns in the table's partitioning function
 > partition key 는 pk 를 등록하면 pk와 함께 묶여야 하고, unique key 를 등록하면 등록한 unique key 와도 함께 묶여야 하는 걸 잊지 말자
-* 그러면 
+* 그러면 pk 도 unique index 가 걸려 있다면 어떻게 될까?
+```
+CREATE TABLE tb_article (
+ article_id BIGINT(20) AUTO_INC NOT NULL,
+ col1 VARCHAR(45) NULL,
+ col2 INT NULL,
+ reg_date DATETIME NOT NULL,
+ PRIMARY KEY (article_id, reg_date),
+ UNIQUE KEY (col2, reg_date)
+)
+PARTITION BY RANGE ( YEAR(reg_date) ) (
+ PARTITION p2009 VALUES LESS THAN (2010),
+ PARTITION p2010 VALUES LESS THAN (2011),
+ PARTITION p2011 VALUES LESS THAN (2012),
+ PARTITION p9999 VALUES LESS THAN MAXVALUE
+);
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgwMTMwMjQwMCw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTEzMTQwNTI0OCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
