--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -117,9 +117,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 > ` UNIQUE KEY (col2, reg_date) ` 이 부분을 ` UNIQUE KEY (col2), UNIQUE KEY (reg_date) ` 이렇게 바꾸면 아래와 같이 위와 동일한 에러가 발생한다
 > ERROR 1503 (HY000): A UNIQUE INDEX must include all columns in the table's partitioning function
 > partition key 는 pk 를 등록하면 pk와 함께 묶여야 하고, unique key 를 등록하면 등록한 unique key 와도 함께 묶여야 하는 걸 잊지 말자
-* 
+#### 파티션 테이블의 레코드 INSERT
+* INSERT 쿼리가 실행된 후 동작
+	* INSERT 되는 컬럼의 값 중 파티션 키인 reg_date 칼럼의 값을 사용해 파티션 표현식을 평가함
+	* 평가 결과를 이용해 레코드가 저장될 적절한 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyODI3ODY4OCw0MTk1ODkzLC0xMDI2ND
-E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
-ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNTMxMDI4MDQxLDQxOTU4OTMsLTEwMjY0MT
+k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
+OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
