RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -120,9 +120,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 #### 파티션 테이블의 레코드 INSERT
 * INSERT 쿼리가 실행된 후 동작
 	* INSERT 되는 컬럼의 값 중 파티션 키인 reg_date 칼럼의 값을 사용해 파티션 표현식을 평가함
-	* 평가 결과를 이용해 레코드가 저장될 적절한 
+	* 평가 결과를 이용해 레코드가 저장될 적절한 파티션을 결정
+	* 새로 INSERT 되는 레코드의 파티션이 결정되면 나머지는 파티션되지 않은 일반 테이블 INSERT 와 마찬가지로 처리
+#### 파티션 테이블의 UPDATE
+* UPDATE 쿼리가 실행된 후 동작
+	* 변경
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMxMDI4MDQxLDQxOTU4OTMsLTEwMjY0MT
+eyJoaXN0b3J5IjpbLTcwMjI3NTg5LDQxOTU4OTMsLTEwMjY0MT
 k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
 OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
