RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -124,9 +124,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 새로 INSERT 되는 레코드의 파티션이 결정되면 나머지는 파티션되지 않은 일반 테이블 INSERT 와 마찬가지로 처리
 #### 파티션 테이블의 UPDATE
 * UPDATE 쿼리가 실행된 후 동작
-	* 변경
+	* 변경 대사 레코드가 어느 파티션에 저장되어 있는지 찾음
+	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하는* 경우**
+		* 해당 키 값을 이용해서 레코드가 저장된 파티션에서 빠르게 대상 레코드 검색 가능
+	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 **존재하지 않는** 경우
+		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcwMjI3NTg5LDQxOTU4OTMsLTEwMjY0MT
-k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
-OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbMTAwODE3NjQxNiw0MTk1ODkzLC0xMDI2ND
+E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
+ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
