RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -125,12 +125,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 #### 파티션 테이블의 UPDATE
 * UPDATE 쿼리가 실행된 후 동작
 	* 변경 대사 레코드가 어느 파티션에 저장되어 있는지 찾음
-	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하는* 경우**
+	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하는*** 경우
 		* 해당 키 값을 이용해서 레코드가 저장된 파티션에서 빠르게 대상 레코드 검색 가능
-	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 **존재하지 않는** 경우
-		* 
+	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하지 않는*** 경우
+		* 테이블의 모든 파티션을 검색해야 함
+	* 실제 레코드의 컬럼을 변경하는 작업의 절차는 UPDATE 쿼리가 어떤 컬럼 값을 변경하는지에 따라 큰 차이가 있음
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwODE3NjQxNiw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTkzNTMxMzA1NCw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
