RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -130,8 +130,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하지 않는*** 경우
 		* 테이블의 모든 파티션을 검색해야 함
 	* 실제 레코드의 컬럼을 변경하는 작업의 절차는 UPDATE 쿼리가 어떤 컬럼 값을 변경하는지에 따라 큰 차이가 있음
+		* 파티션 키 *이외의* 칼럼이 변경되는 경우
+			* 파티션이 적용되지 않은 일반 테이블과 마찬가지로 칼럼 값만 변경됨
+		* 파티션 키 컬럼이 변경되는 경우
+			* 1) 기존의 레코드가 저장된 파티션에서 해당 레코드를 삭제
+			* 2) 변경되는 파티션 키 칼럼의 표서
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkzNTMxMzA1NCw0MTk1ODkzLC0xMDI2ND
+eyJoaXN0b3J5IjpbMTYwNzI0NDAyNiw0MTk1ODkzLC0xMDI2ND
 E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
 ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
