RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -133,10 +133,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 파티션 키 *이외의* 칼럼이 변경되는 경우
 			* 파티션이 적용되지 않은 일반 테이블과 마찬가지로 칼럼 값만 변경됨
 		* 파티션 키 컬럼이 변경되는 경우
-			* 1) 기존의 레코드가 저장된 파티션에서 해당 레코드를 삭제
-			* 2) 변경되는 파티션 키 칼럼의 표서
+
+			1) 기존의 레코드가 저장된 파티션에서 해당 레코드를 삭제
+			2) 변경되는 파티션 키 칼럼의 표현식을 평가
+			3) 2번의 결과를 이용해 레코드를 이동시킬 새로운 파티션을 결정해서 레코드를 저장
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYwNzI0NDAyNiw0MTk1ODkzLC0xMDI2ND
-E5OTc4LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5
-ODgsLTExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MT
+k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
+OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
