RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -133,12 +133,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 파티션 키 *이외의* 칼럼이 변경되는 경우
 			* 파티션이 적용되지 않은 일반 테이블과 마찬가지로 칼럼 값만 변경됨
 		* 파티션 키 컬럼이 변경되는 경우
-
+![파티션 키 칼럼이 변경되는 UPDATE 문장의 처리](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-25-23-34-56.jpeg)
 			1) 기존의 레코드가 저장된 파티션에서 해당 레코드를 삭제
 			2) 변경되는 파티션 키 칼럼의 표현식을 평가
 			3) 2번의 결과를 이용해 레코드를 이동시킬 새로운 파티션을 결정해서 레코드를 저장
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MT
-k5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4
-OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbLTEwOTU0MDU1OTEsNzI4MDM0NDg4LDQxOT
+U4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIw
+NCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ
+==
 -->
