--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -124,12 +124,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* 새로 INSERT 되는 레코드의 파티션이 결정되면 나머지는 파티션되지 않은 일반 테이블 INSERT 와 마찬가지로 처리
 #### 파티션 테이블의 UPDATE
 * UPDATE 쿼리가 실행된 후 동작
-	* 변경 대사 레코드가 어느 파티션에 저장되어 있는지 찾음
-	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하는*** 경우
+	1) 변경 대사 레코드가 어느 파티션에 저장되어 있는지 찾음
+	2) where 조건 절로 판단
+	2-1) **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하는*** 경우
 		* 해당 키 값을 이용해서 레코드가 저장된 파티션에서 빠르게 대상 레코드 검색 가능
-	* **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하지 않는*** 경우
+	2-2) **WHERE** 조건에 **파티션 키 칼럼**이 조건으로 ***존재하지 않는*** 경우
 		* 테이블의 모든 파티션을 검색해야 함
-	* 실제 레코드의 컬럼을 변경하는 작업의 절차는 UPDATE 쿼리가 어떤 컬럼 값을 변경하는지에 따라 큰 차이가 있음
+	4) 실제 레코드의 컬럼을 변경하는 작업의 절차는 UPDATE 쿼리가 어떤 컬럼 값을 변경하는지에 따라 큰 차이가 있음
 		* 파티션 키 *이외의* 칼럼이 변경되는 경우
 			* 파티션이 적용되지 않은 일반 테이블과 마찬가지로 칼럼 값만 변경됨
 		* 파티션 키 컬럼이 변경되는 경우
@@ -138,7 +139,7 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 			2) 변경되는 파티션 키 칼럼의 표현식을 평가
 			3) 2번의 결과를 이용해 레코드를 이동시킬 새로운 파티션을 결정해서 레코드를 저장
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwOTU0MDU1OTEsNzI4MDM0NDg4LDQxOT
+eyJoaXN0b3J5IjpbLTE2MTAyNTg4OTUsNzI4MDM0NDg4LDQxOT
 U4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwtMTM1NzU3ODIw
 NCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MDk3Njc1OThdfQ
 ==
