RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -119,9 +119,9 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 > partition key 는 pk 를 등록하면 pk와 함께 묶여야 하고, unique key 를 등록하면 등록한 unique key 와도 함께 묶여야 하는 걸 잊지 말자
 #### 파티션 테이블의 레코드 INSERT
 * INSERT 쿼리가 실행된 후 동작
-	* INSERT 되는 컬럼의 값 중 파티션 키인 reg_date 칼럼의 값을 사용해 파티션 표현식을 평가함
-	* 평가 결과를 이용해 레코드가 저장될 적절한 파티션을 결정
-	* 새로 INSERT 되는 레코드의 파티션이 결정되면 나머지는 파티션되지 않은 일반 테이블 INSERT 와 마찬가지로 처리
+	1) INSERT 되는 컬럼의 값 중 파티션 키인 reg_date 칼럼의 값을 사용해 파티션 표현식을 평가함
+	2) 평가 결과를 이용해 레코드가 저장될 적절한 파티션을 결정
+	3) 새로 INSERT 되는 레코드의 파티션이 결정되면 나머지는 파티션되지 않은 일반 테이블 INSERT 와 마찬가지로 처리
 #### 파티션 테이블의 UPDATE
 * UPDATE 쿼리가 실행된 후 동작
 	1) 변경 대사 레코드가 어느 파티션에 저장되어 있는지 찾음
@@ -140,7 +140,8 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ![파티션 키 칼럼이 변경되는 UPDATE 문장의 처리](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-25-23-34-56.jpeg)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NT
-g5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0
-LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbOTUwMTAwMDQ0LC05ODYxNTIwMDUsNzI4MD
+M0NDg4LDQxOTU4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwt
+MTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MD
+k3Njc1OThdfQ==
 -->
