--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -138,10 +138,13 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 			2) 변경되는 파티션 키 칼럼의 표현식을 평가
 			3) 2번의 결과를 이용해 레코드를 이동시킬 새로운 파티션을 결정해서 레코드를 저장
 ![파티션 키 칼럼이 변경되는 UPDATE 문장의 처리](https://github.com/tatarobo/Study/blob/master/RealMysql/image/KakaoTalk_Image_2021-05-25-23-34-56.jpeg)
-
+#### 파티션 테이블의 검색
+* 성능에 크게 영향을 미치는 요인
+	* **where 절의 조건**으로 **검색해야 할 파티션을 선택**할 수 있는가?
+	* **where 절의 조건**이 인덱스를 효율적으로 사용(인덱스 레인지 스캔) 할 수 있는가?
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTUwMTAwMDQ0LC05ODYxNTIwMDUsNzI4MD
-M0NDg4LDQxOTU4OTMsLTEwMjY0MTk5NzgsMTkyNzAxMTU3NSwt
-MTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMTExMzEyNzc5LDE1MD
-k3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbNjczMjg1MzAsLTk4NjE1MjAwNSw3MjgwMz
+Q0ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0x
+MzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOT
+c2NzU5OF19
 -->
