--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -141,10 +141,16 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 #### 파티션 테이블의 검색
 * 성능에 크게 영향을 미치는 요인
 	* **where 절의 조건**으로 **검색해야 할 파티션을 선택**할 수 있는가?
-	* **where 절의 조건**이 인덱스를 효율적으로 사용(인덱스 레인지 스캔) 할 수 있는가?
+	* **where 절의 조건**이 인덱스를 효율적으로 사용(**인덱스 레인지 스캔**) 할 수 있는가?
+		* 이 내용은 파티션 테이블이 아닌 테이블에도 동일하게 적용됨
+* 두 가지 요인들의 조합에 따른 실행
+	* **파티션 선택 가능 + 인덱스 효율적 사용 가능**
+		* 가장 효율적
+		* 파티션 개수에 상관없이 검색을 위해 꼭 필요한 파티션의 인덱스만 레인지 스캔
+	* 파티션 선태
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjczMjg1MzAsLTk4NjE1MjAwNSw3MjgwMz
-Q0ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwxOTI3MDExNTc1LC0x
-MzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMTEzMTI3NzksMTUwOT
-c2NzU5OF19
+eyJoaXN0b3J5IjpbMTEyMTkxNzM5OSwtOTg2MTUyMDA1LDcyOD
+AzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUs
+LTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMTMxMjc3OSwxNT
+A5NzY3NTk4XX0=
 -->
