RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -147,9 +147,10 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* **파티션 선택 가능 + 인덱스 효율적 사용 가능**
 		* 가장 효율적
 		* 파티션 개수에 상관없이 검색을 위해 꼭 필요한 파티션의 인덱스만 레인지 스캔
-	* 파티션 선태
+	* **파티션 선택 불가 + 인덱스 효율적 사용 가능**
+		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyMTkxNzM5OSwtOTg2MTUyMDA1LDcyOD
+eyJoaXN0b3J5IjpbLTEzMDA2MDY1NywtOTg2MTUyMDA1LDcyOD
 AzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUs
 LTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMTMxMjc3OSwxNT
 A5NzY3NTk4XX0=
