RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -147,11 +147,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* **파티션 선택 가능 + 인덱스 효율적 사용 가능**
 		* 가장 효율적
 		* 파티션 개수에 상관없이 검색을 위해 꼭 필요한 파티션의 인덱스만 레인지 스캔
+	![가장 효율적인 방법](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.47.34.png)
 	* **파티션 선택 불가 + 인덱스 효율적 사용 가능**
 		* 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMDA2MDY1NywtOTg2MTUyMDA1LDcyOD
-AzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5MjcwMTE1NzUs
-LTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMTMxMjc3OSwxNT
-A5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTEwNjAxMjgzMDcsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
