--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -149,10 +149,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 파티션 개수에 상관없이 검색을 위해 꼭 필요한 파티션의 인덱스만 레인지 스캔
 ![가장 효율적인 방법](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.47.34.png)
 	* **파티션 선택 불가 + 인덱스 효율적 사용 가능**
-		* 
+		* 모든 파티션을 대상으로 검색
+		* 각 파티션에 대해서 인덱스 레인지 스캔 가능
+		* 결론 : 테이블에 존재하는 모든 파티션 개수만큼 인덱스 레인지 스탬을 수행해서 검색
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE1OTg0MTY1MywtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbOTMzMjk2MjcsLTEzMDA2MDY1NywtOTg2MT
+UyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5
+MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMT
+MxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
