RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -152,9 +152,11 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 모든 파티션을 대상으로 검색
 		* 각 파티션에 대해서 인덱스 레인지 스캔 가능
 		* 결론 : 테이블에 존재하는 모든 파티션 개수만큼 인덱스 레인지 스탬을 수행해서 검색
+			* = 파티션 개수만큼의 테이블에 대해 인덱스 레인지 스탬을 한 다음 결과를 병합해서 가져오는 것과 동일
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTMzMjk2MjcsLTEzMDA2MDY1NywtOTg2MT
-UyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4LDE5
-MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLTExMT
-MxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbLTg3NzI0MDk3NywtMTMwMDYwNjU3LC05OD
+YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
+MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
+ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
 -->
