--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -153,9 +153,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 각 파티션에 대해서 인덱스 레인지 스캔 가능
 		* 결론 : 테이블에 존재하는 모든 파티션 개수만큼 인덱스 레인지 스탬을 수행해서 검색
 			* = 파티션 개수만큼의 테이블에 대해 인덱스 레인지 스탬을 한 다음 결과를 병합해서 가져오는 것과 동일
-
+![파티션 선택 불가 + 인덱스 효율적 사용 가능](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.51.52.png)
+	* **파티션 선택 가능 + 인덱스 효율적 사용 불가**
+		* 필요한 파티션만 읽으면 됨
+		* 인덱스는 사용 불가 = 파티션 테이블 풀 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg3NzI0MDk3NywtMTMwMDYwNjU3LC05OD
+eyJoaXN0b3J5IjpbMTI1MDE3MjczMiwtMTMwMDYwNjU3LC05OD
 YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
 MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
 ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
