--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -156,10 +156,12 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 ![파티션 선택 불가 + 인덱스 효율적 사용 가능](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.51.52.png)
 	* **파티션 선택 가능 + 인덱스 효율적 사용 불가**
 		* 필요한 파티션만 읽으면 됨
-		* 인덱스는 사용 불가 = 파티션 테이블 풀 
+		* 인덱스는 사용 불가 = 파티션 테이블 풀 스캔
+			* 레코드 수가 많다면 상당히 느리게 처리될 것임
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI1MDE3MjczMiwtMTMwMDYwNjU3LC05OD
-YxNTIwMDUsNzI4MDM0NDg4LDQxOTU4OTMsLTEwMjY0MTk5Nzgs
-MTkyNzAxMTU3NSwtMTM1NzU3ODIwNCwtMTgzNjc2ODk4OCwtMT
-ExMzEyNzc5LDE1MDk3Njc1OThdfQ==
+eyJoaXN0b3J5IjpbMTYxNjg1MDMxLC0xMzAwNjA2NTcsLTk4Nj
+E1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwx
+OTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMT
+EzMTI3NzksMTUwOTc2NzU5OF19
 -->
