--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -158,10 +158,14 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 필요한 파티션만 읽으면 됨
 		* 인덱스는 사용 불가 = 파티션 테이블 풀 스캔
 			* 레코드 수가 많다면 상당히 느리게 처리될 것임
+![파티션 선택 가능 + 인덱스 효율적 사용 불가](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.55.09.png)
+	* **파티션 선택 불가 + 인덱스 효율적 사용 불가**
+		* 모든 파티션 검색
+		* 인덱스 사용 불가하므로 풀 스캔
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYxNjg1MDMxLC0xMzAwNjA2NTcsLTk4Nj
-E1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5MywtMTAyNjQxOTk3OCwx
-OTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xODM2NzY4OTg4LC0xMT
-EzMTI3NzksMTUwOTc2NzU5OF19
+eyJoaXN0b3J5IjpbLTExNzgzMjQ2NDgsLTEzMDA2MDY1NywtOT
+g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
+LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
+ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
 -->
