--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -162,9 +162,10 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 	* **파티션 선택 불가 + 인덱스 효율적 사용 불가**
 		* 모든 파티션 검색
 		* 인덱스 사용 불가하므로 풀 스캔
-
+![파티션 선택 불가 + 인덱스 효율적 사용 불가](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.57.21.png)
+* 마지막 세번째와 네번째는
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNzgzMjQ2NDgsLTEzMDA2MDY1NywtOT
+eyJoaXN0b3J5IjpbLTIwMjc2OTg3MDUsLTEzMDA2MDY1NywtOT
 g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
 LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
 ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
