RealMysql/10. 파티션.md updated from https://stackedit.io/

--- a/RealMysql/10. 파티션.md
+++ b/RealMysql/10. 파티션.md
@@ -153,21 +153,23 @@ PARTITION BY RANGE ( YEAR(reg_date) ) (
 		* 각 파티션에 대해서 인덱스 레인지 스캔 가능
 		* 결론 : 테이블에 존재하는 모든 파티션 개수만큼 인덱스 레인지 스탬을 수행해서 검색
 			* = 파티션 개수만큼의 테이블에 대해 인덱스 레인지 스탬을 한 다음 결과를 병합해서 가져오는 것과 동일
+		* 테이블에 파티션 개수가 많을 때는 MySQL 서버의 부하가 높아지고 처리 시간도 느려지므로 조심
 ![파티션 선택 불가 + 인덱스 효율적 사용 가능](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.51.52.png)
 	* **파티션 선택 가능 + 인덱스 효율적 사용 불가**
 		* 필요한 파티션만 읽으면 됨
 		* 인덱스는 사용 불가 = 파티션 테이블 풀 스캔
 			* 레코드 수가 많다면 상당히 느리게 처리될 것임
+		* 가능한 한 피해야 하는 방법
 ![파티션 선택 가능 + 인덱스 효율적 사용 불가](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.55.09.png)
 	* **파티션 선택 불가 + 인덱스 효율적 사용 불가**
 		* 모든 파티션 검색
 		* 인덱스 사용 불가하므로 풀 스캔
+		* 가능한 한 피해야 하는 방법
 ![파티션 선택 불가 + 인덱스 효율적 사용 불가](https://github.com/tatarobo/Study/blob/master/RealMysql/image/%EC%8A%A4%ED%81%AC%EB%A6%B0%EC%83%B7%202021-05-25%20%EC%98%A4%ED%9B%84%2011.57.21.png)
-* 세번째와 네번째는 가능한 한 피해라
-* 두번째도 테이블에 파티션 개수가 많을 때는 MySQL 서버의 부하가 높아지고 처리 시간도 느려지므로 조심
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNzAzNzI0MzMsLTEzMDA2MDY1NywtOT
-g2MTUyMDA1LDcyODAzNDQ4OCw0MTk1ODkzLC0xMDI2NDE5OTc4
-LDE5MjcwMTE1NzUsLTEzNTc1NzgyMDQsLTE4MzY3Njg5ODgsLT
-ExMTMxMjc3OSwxNTA5NzY3NTk4XX0=
+eyJoaXN0b3J5IjpbNjc3OTI1MDk2LC0xMDcwMzcyNDMzLC0xMz
+AwNjA2NTcsLTk4NjE1MjAwNSw3MjgwMzQ0ODgsNDE5NTg5Mywt
+MTAyNjQxOTk3OCwxOTI3MDExNTc1LC0xMzU3NTc4MjA0LC0xOD
+M2NzY4OTg4LC0xMTEzMTI3NzksMTUwOTc2NzU5OF19
 -->
