--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -4,19 +4,8 @@
 # 6. 실행 계획
 ## 6.1 개요
 ### 6.1.1 쿼리 실행 절차
-* 데이터를 저장할 수 있는 매체
-	* 내장 디스크
-	* DAS (Direct Attached Storage)
-		* disk 만 존재. 컴퓨터에 연결해서 사용
-		* 한 컴퓨터에만 연결할 수 있음 (여러 컴퓨터 공유 불가능)
-	* NAS (Network Attached Storage)
-		* 컴퓨터와 tcp/ip 를 통해 연결됨
-		* 직접 연결 보다는 속도가 느림
-	* SAN (Storage Area Network)
-		* 광케이블롸 컴퓨터 본체와 연결
-		* 여러 컴퓨터에서 접근 가능
-		* 빠르지만, 비용이 많이 듦
-### 5.1.2 디스크 드라이브와 솔리드 스테이트 드라이브 (SSD)
+* 
+### 6.1.2 옵티마이저의 종류
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAyMzU1Mzg0OCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
 -->
