RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -4,8 +4,10 @@
 # 6. 실행 계획
 ## 6.1 개요
 ### 6.1.1 쿼리 실행 절차
-* 
+* 첫 번째 단계 : SQL 파싱
+* SQL 
 ### 6.1.2 옵티마이저의 종류
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTg0NzYzNDI1OCwxOTQ4NTc1MDU0LC0xOD
+M5Mzc2NDIwXX0=
 -->
