RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -5,9 +5,12 @@
 ## 6.1 개요
 ### 6.1.1 쿼리 실행 절차
 * 첫 번째 단계 : SQL 파싱
-* SQL 
+	* SQL 파서 모듈이 담당
+	* SQ 파스 트리 생성
+* 두 번째 단계 : 최적화 및 실행 계획 수립
+	* MySQL 서버의 옵티마이저가 담당
 ### 6.1.2 옵티마이저의 종류
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0NzYzNDI1OCwxOTQ4NTc1MDU0LC0xOD
-M5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTEzNjkzODQyMTIsMTk0ODU3NTA1NCwtMT
+gzOTM3NjQyMF19
 -->
