RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -9,8 +9,11 @@
 	* SQ 파스 트리 생성
 * 두 번째 단계 : 최적화 및 실행 계획 수립
 	* MySQL 서버의 옵티마이저가 담당
+	* 실행 계획 생성
+* 세 번째 단계 : 데이터를 읽어옴
+	* 수립된 실행 꼫
 ### 6.1.2 옵티마이저의 종류
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjkzODQyMTIsMTk0ODU3NTA1NCwtMT
-gzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbMTM0ODA1NTE2LDE5NDg1NzUwNTQsLTE4Mz
+kzNzY0MjBdfQ==
 -->
