RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -11,9 +11,11 @@
 	* MySQL 서버의 옵티마이저가 담당
 	* 실행 계획 생성
 * 세 번째 단계 : 데이터를 읽어옴
-	* 수립된 실행 꼫
+	* 수립된 실행 계획을 바탕으로 스토리 엔진에 레코드를 읽어오도록 요청
+	* MySQL 엔진에서 읽어온 레코드를 조인하거나 정렬하는 작업 수행 
 ### 6.1.2 옵티마이저의 종류
+### 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM0ODA1NTE2LDE5NDg1NzUwNTQsLTE4Mz
-kzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbLTE4MzcwMzQ0MzQsMTk0ODU3NTA1NCwtMT
+gzOTM3NjQyMF19
 -->
