--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -14,13 +14,15 @@
 	* 수립된 실행 계획을 바탕으로 스토리 엔진에 레코드를 읽어오도록 요청
 	* MySQL 엔진에서 읽어온 레코드를 조인하거나 정렬하는 작업 수행 
 ### 6.1.2 옵티마이저의 종류
-
+* 규칙 기반 최적화 방법
+	* 대상 테이블의 레코드 건수나 선택도 등을 고려하지 않고
+* 비용 기반 최적화 방법
 ### 6.1.3 통계 정보
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
-### 6.2.3 t
+### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0MTI1NjM2NCwxOTQ4NTc1MDU0LC0xOD
-M5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTEzNTgxMzI4ODUsMTk0ODU3NTA1NCwtMT
+gzOTM3NjQyMF19
 -->
