RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -15,14 +15,16 @@
 	* MySQL 엔진에서 읽어온 레코드를 조인하거나 정렬하는 작업 수행 
 ### 6.1.2 옵티마이저의 종류
 * 규칙 기반 최적화 방법
-	* 대상 테이블의 레코드 건수나 선택도 등을 고려하지 않고
+	* 대상 테이블의 레코드 건수나 선택도 등을 고려하지 않고, 옵티마이저에 내장된 우선 순위에 따라 실행 계획 수립
+	* old한 방법
 * 비용 기반 최적화 방법
+	* 여러 가지 가능한 방법을 만들고 
 ### 6.1.3 통계 정보
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTgxMzI4ODUsMTk0ODU3NTA1NCwtMT
-gzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTk0NzAyNTM1NiwxOTQ4NTc1MDU0LC0xOD
+M5Mzc2NDIwXX0=
 -->
