--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -18,13 +18,13 @@
 	* 대상 테이블의 레코드 건수나 선택도 등을 고려하지 않고, 옵티마이저에 내장된 우선 순위에 따라 실행 계획 수립
 	* old한 방법
 * 비용 기반 최적화 방법
-	* 여러 가지 가능한 방법을 만들고 
+	* 여러 가지 가능한 실행 계획중 각 단위 작업의 비용(부하) 정보와 대상 테이블의 예측된 통계 정보를 토대로 최소 비용이  선택.
 ### 6.1.3 통계 정보
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0NzAyNTM1NiwxOTQ4NTc1MDU0LC0xOD
-M5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbNDg5NzMyOTcsMTk0ODU3NTA1NCwtMTgzOT
+M3NjQyMF19
 -->
