--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -20,12 +20,14 @@
 * 비용 기반 최적화 방법
 	* 여러 가지 가능한 실행 계획중 각 단위 작업의 비용(부하) 정보와 대상 테이블의 예측된 통계 정보를 토대로 최소 비용이 드는 실행 계획 선택.
 ### 6.1.3 통계 정보
-* 비용 기반 최적화에서 가장 중요한 것은 통계 정보. (통계 정보가 )
+* 비용 기반 최적화에서 가장 중요한 것은 통계 정보. 
+	* 예) 잘못된 통계 정보에 의해 인덱스 레인지 스켄이 아니라 풀 테이블 스캔이 일어나 성능 저하를 일으킬 수 있음
+* MySQL에서 관리되는 
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTk5ODU0NjksMTk0ODU3NTA1NCwtMT
-gzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbMTYyMzI0MTkxNSwxOTQ4NTc1MDU0LC0xOD
+M5Mzc2NDIwXX0=
 -->
