--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -22,12 +22,12 @@
 ### 6.1.3 통계 정보
 * 비용 기반 최적화에서 가장 중요한 것은 통계 정보. 
 	* 예) 잘못된 통계 정보에 의해 인덱스 레인지 스켄이 아니라 풀 테이블 스캔이 일어나 성능 저하를 일으킬 수 있음
-* MySQL에서 관리되는 
+* MySQL에서 관리되는 통계 정보 : 대략의 레코드 건수, 인덱스의 유니크한 값의 개수 정도
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyMzI0MTkxNSwxOTQ4NTc1MDU0LC0xOD
+eyJoaXN0b3J5IjpbMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xOD
 M5Mzc2NDIwXX0=
 -->
