RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -23,14 +23,15 @@
 * 비용 기반 최적화에서 가장 중요한 것은 통계 정보. 
 	* 예) 잘못된 통계 정보에 의해 인덱스 레인지 스켄이 아니라 풀 테이블 스캔이 일어나 성능 저하를 일으킬 수 있음
 * MySQL에서 관리되는 통계 정보 : 대략의 레코드 건수, 인덱스의 유니크한 값의 개수 정도
-* 레코드 건수가 많지 않으면 통계 정보가 부정확한 경우 발생 -> ANALYZE 명령을 이용해 강제로 정보 갱신 필요
+* 레코드 건수가 많지 않으면 통계 정보가 부정확한 경우 발생 -> ANALYZE 명령을 이용해 강제로 정보 갱신 필요 (인덱스 키값의 분포도만 업데이트)
 	* MEMORY : 통계 정보X
-	* MyISAM, InnoDB  : 테이블과 인덱스 통계 정보 존재
+	* MyISAM : 테이블과 인덱스 통계 정보 존재, 읽기O 쓰기X
+	* InnoDB  : 테이블과 인덱스 통계 정보 존재, 
 ## 6.2 실행 계획 분석
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzMxNDYyNjMsLTEwNzc1NTUwMzEsMT
+eyJoaXN0b3J5IjpbLTE0ODc3OTg4NTMsLTEwNzc1NTUwMzEsMT
 k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
