--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -26,12 +26,13 @@
 * 레코드 건수가 많지 않으면 통계 정보가 부정확한 경우 발생 -> ANALYZE 명령을 이용해 강제로 정보 갱신 필요 (인덱스 키값의 분포도만 업데이트)
 	* MEMORY : 통계 정보X
 	* MyISAM : 테이블과 인덱스 통계 정보 존재, 읽기O 쓰기X
-	* InnoDB  : 테이블과 인덱스 통계 정보 존재, 
+	* InnoDB  : 테이블과 인덱스 통계 정보 존재, 읽기X 쓰기X
 ## 6.2 실행 계획 분석
+* EXPLAIN : 쿼리의 실행 계획을 확인하는 명령어
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODc3OTg4NTMsLTEwNzc1NTUwMzEsMT
-k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbNDA3MjAxMTQyLC0xMDc3NTU1MDMxLDE5OT
+UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
 -->
