RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -29,10 +29,12 @@
 	* InnoDB  : 테이블과 인덱스 통계 정보 존재, 읽기X 쓰기X
 ## 6.2 실행 계획 분석
 * EXPLAIN : 쿼리의 실행 계획을 확인하는 명령어
+`EXPLAIN
+SELECT e.emp_no`
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDA3MjAxMTQyLC0xMDc3NTU1MDMxLDE5OT
-UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbMTYwMjkwNzc1NiwtMTA3NzU1NTAzMSwxOT
+k1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
