RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -38,11 +38,17 @@ WHERE e.emp_no=s.emp_no
 LIMIT 10;
 ```
 * 결과
-
+```
+|id|select_type|table|type|Key|Key_len|ref|rows|Extra
+|------|---|---|
+|테스트1|테스트2|테스트3|
+|테스트1|테스트2|테스트3|
+|테스트1|테스트2|테스트3|
+```
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTQwOTkzMzYwLC0xMDc3NTU1MDMxLDE5OT
-UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTM0NTcxNjE2OCwtMTA3NzU1NTAzMSwxOT
+k1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
