RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -41,14 +41,13 @@ LIMIT 10;
 * 
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
-|1|SIMPLE|e|index|
-|1|테스트2|테스트3|
-|테스트1|테스트2|테스트3|
+|1|SIMPLE|e|index|ix_firstname|44||300584|Using index|
+|1|SIMPLE|s|ref|ix_firstname|44||300584|Using index|
 
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTkwNTc2NjM5LC0xMDc3NTU1MDMxLDE5OT
+eyJoaXN0b3J5IjpbNzIxNTA4MTY4LC0xMDc3NTU1MDMxLDE5OT
 UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
 -->
