--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -38,16 +38,17 @@ WHERE e.emp_no=s.emp_no
 LIMIT 10;
 ```
 * 결과
-* 
+	* vy
+
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
 |1|SIMPLE|e|index|ix_firstname|44||300584|Using index|
-|1|SIMPLE|s|ref|ix_firstname|44||300584|Using index|
+|1|SIMPLE|s|ref|PRIMARY|4|employees.e.emp_no|4||
 
 ### 6.2.1 id 칼럼
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzIxNTA4MTY4LC0xMDc3NTU1MDMxLDE5OT
-UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTEwNDgzODQyNzYsLTEwNzc1NTUwMzEsMT
+k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
