RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -40,6 +40,7 @@ LIMIT 10;
 * 결과
 	* 레코드는 쿼리 문장에서 사용된 테이블(임시 테이블도 포함)의 개수만큼 출력
 	* 실행순서는 위에서 아래로 진행
+	* 실행 계획 산출 위해 일부 직접 실행하기도 함
 	* 
 
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
@@ -51,6 +52,6 @@ LIMIT 10;
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyMDkwNzM5LC0xMDc3NTU1MDMxLDE5OT
-UzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMT
+k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
