RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -41,7 +41,7 @@ LIMIT 10;
 	* 레코드는 쿼리 문장에서 사용된 테이블(임시 테이블도 포함)의 개수만큼 출력
 	* 실행순서는 위에서 아래로 진행
 	* 실행 계획 산출 위해 일부 직접 실행하기도 함
-	* 
+	* UPDATE, INSERT, DELETE문장에 대해서는 실행 계획 확인 불가
 
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
@@ -49,9 +49,11 @@ LIMIT 10;
 |1|SIMPLE|s|ref|PRIMARY|4|employees.e.emp_no|4||
 
 ### 6.2.1 id 칼럼
+다
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMT
-k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTE5MDAzNzczOTcsLTEzMTM3MDUwNTQsLT
+EwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5
+Mzc2NDIwXX0=
 -->
