--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -49,12 +49,12 @@ LIMIT 10;
 |1|SIMPLE|s|ref|PRIMARY|4|employees.e.emp_no|4||
 
 ### 6.2.1 id 칼럼
-* 단위 SELECT 쿼리별로 부여되는 식별자
-* 만약  하나의 SELECT 문장 안엣거 여러 개으 ㅣ테이블을 조인하면 조인되는 테이블의 개수만큼 실행 꼐획 레코드가 출
+* 단위 SELECT 쿼리별로 부여되는 식별자. p268
+* 만약  하나의 SELECT 문장 안에서 여러 개의 테이블을 조인하면 조인되는 테이블의 개수만큼 실행 계획 레코드가 출력되지만 같은 id가 부여된다. p269-1
 ### 6.2.2 select_type 칼럼
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyNDA5MTEyLC0xMzEzNzA1MDU0LC0xMD
-c3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3
-NjQyMF19
+eyJoaXN0b3J5IjpbMTMwMTU4ODg0OCwtMTMxMzcwNTA1NCwtMT
+A3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4Mzkz
+NzY0MjBdfQ==
 -->
