--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -53,11 +53,15 @@ LIMIT 10;
 * 만약  하나의 SELECT 문장 안에서 여러 개의 테이블을 조인하면 조인되는 테이블의 개수만큼 실행 계획 레코드가 출력되지만 같은 id가 부여된다. p269-1
 ### 6.2.2 select_type 칼럼
 * 각 단위 SELECT 쿼리가 어떤 타입의 쿼리인지 표시되는 칼럼.
-* SIMPLE
-* 
+* **SIMPLE**
+* **PRIMARY**
+* **UNION**
+* **DEPENDENT UNION**
+* **UNION RESULT**
+* **SUBQUER
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM2MDYxNDA3MiwtMTMxMzcwNTA1NCwtMT
+eyJoaXN0b3J5IjpbMTYyMzUyODgyMiwtMTMxMzcwNTA1NCwtMT
 A3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4Mzkz
 NzY0MjBdfQ==
 -->
