RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -58,10 +58,14 @@ LIMIT 10;
 * **UNION**
 * **DEPENDENT UNION**
 * **UNION RESULT**
-* **SUBQUER
+* **SUBQUERY**
+* **DEPENDENT SUBQUERY**
+* **DERIVED**
+* **UNCACHABLE SUBQUERY**
+* **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYyMzUyODgyMiwtMTMxMzcwNTA1NCwtMT
-A3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4Mzkz
-NzY0MjBdfQ==
+eyJoaXN0b3J5IjpbNjg3MjM4NzAyLC0xMzEzNzA1MDU0LC0xMD
+c3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3
+NjQyMF19
 -->
