RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -54,6 +54,8 @@ LIMIT 10;
 ### 6.2.2 select_type 칼럼
 각 단위 SELECT 쿼리가 어떤 타입의 쿼리인지 표시되는 칼럼.
 * **SIMPLE**
+	* UNION이나 서브 쿼리를 사용하지 않은 단순한 SELECT 쿼리인 경우에 해당.
+	* select_type이 SIMPLE인 단위 쿼리는 반드시 하남
 * **PRIMARY**
 * **UNION**
 * **DEPENDENT UNION**
@@ -65,7 +67,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMT
-A3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4Mzkz
-NzY0MjBdfQ==
+eyJoaXN0b3J5IjpbMTU4OTQ0ODg3MSwxMDQ2NDg4NzA2LC0xMz
+EzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3
+NTA1NCwtMTgzOTM3NjQyMF19
 -->
