RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -49,13 +49,13 @@ LIMIT 10;
 |1|SIMPLE|s|ref|PRIMARY|4|employees.e.emp_no|4||
 
 ### 6.2.1 id 칼럼
-단위 SELECT 쿼리별로 부여되는 식별자. p269-2
+*단위 SELECT 쿼리별* 로 부여되는 식별자. p269-2
 * 만약  하나의 SELECT 문장 안에서 여러 개의 테이블을 조인하면 조인되는 테이블의 개수만큼 실행 계획 레코드가 출력되지만 같은 id가 부여된다. p269-1
 ### 6.2.2 select_type 칼럼
 각 단위 SELECT 쿼리가 어떤 타입의 쿼리인지 표시되는 칼럼.
 * **SIMPLE**
 	* UNION이나 서브 쿼리를 사용하지 않은 단순한 SELECT 쿼리인 경우에 해당.
-	* select_type이 SIMPLE인 단위 쿼리는 반드시 하남
+	* select_type이 SIMPLE인 단위 쿼리는 반드시 하나만 존재. (일반적으로 바깥 쿼리가 그렇다.)p268-3
 * **PRIMARY**
 * **UNION**
 * **DEPENDENT UNION**
@@ -67,7 +67,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4OTQ0ODg3MSwxMDQ2NDg4NzA2LC0xMz
-EzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3
-NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbLTExODc3MDYxODksMTA0NjQ4ODcwNiwtMT
+MxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1
+NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
