RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -52,11 +52,12 @@ LIMIT 10;
 *단위 SELECT 쿼리별* 로 부여되는 식별자. p269-2
 * 만약  하나의 SELECT 문장 안에서 여러 개의 테이블을 조인하면 조인되는 테이블의 개수만큼 실행 계획 레코드가 출력되지만 같은 id가 부여된다. p269-1
 ### 6.2.2 select_type 칼럼
-각 단위 SELECT 쿼리가 어떤 타입의 쿼리인지 표시되는 칼럼.
+*각 단위 SELECT 쿼리가 어떤 타입의 쿼리인지 표시* 되는 칼럼.
 * **SIMPLE**
 	* UNION이나 서브 쿼리를 사용하지 않은 단순한 SELECT 쿼리인 경우에 해당.
-	* select_type이 SIMPLE인 단위 쿼리는 반드시 하나만 존재. (일반적으로 바깥 쿼리가 그렇다.)p268-3
+	* select_type이 SIMPLE인 단위 쿼리는 반드시 하나만 존재. (일반적으로 바깥 쿼리가 그렇다.) p268-3
 * **PRIMARY**
+	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는
 * **UNION**
 * **DEPENDENT UNION**
 * **UNION RESULT**
@@ -67,7 +68,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODc3MDYxODksMTA0NjQ4ODcwNiwtMT
+eyJoaXN0b3J5IjpbLTEzNTg3MTQ5MDIsMTA0NjQ4ODcwNiwtMT
 MxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1
 NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
