--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -57,7 +57,8 @@ LIMIT 10;
 	* UNION이나 서브 쿼리를 사용하지 않은 단순한 SELECT 쿼리인 경우에 해당.
 	* select_type이 SIMPLE인 단위 쿼리는 반드시 하나만 존재. (일반적으로 바깥 쿼리가 그렇다.) p268-3
 * **PRIMARY**
-	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는
+	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는 단위 쿼리에 해당.
+	* select_type이 PRIMARY인 단위 쿼리는 반드시 하나만 존재
 * **UNION**
 * **DEPENDENT UNION**
 * **UNION RESULT**
@@ -68,7 +69,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTg3MTQ5MDIsMTA0NjQ4ODcwNiwtMT
-MxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1
-NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbMTQxMTA1NTgwNCwxMDQ2NDg4NzA2LC0xMz
+EzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3
+NTA1NCwtMTgzOTM3NjQyMF19
 -->
