RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -60,6 +60,7 @@ LIMIT 10;
 	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는 단위 쿼리에 해당.
 	* select_type이 PRIMARY인 단위 쿼리는 반드시 하나만 존재
 * **UNION**
+	* UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 당
 * **DEPENDENT UNION**
 * **UNION RESULT**
 * **SUBQUERY**
@@ -69,7 +70,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQxMTA1NTgwNCwxMDQ2NDg4NzA2LC0xMz
+eyJoaXN0b3J5IjpbMTgyMjAxMTQ1MiwxMDQ2NDg4NzA2LC0xMz
 EzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3
 NTA1NCwtMTgzOTM3NjQyMF19
 -->
