--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -57,12 +57,12 @@ LIMIT 10;
 	* UNION이나 서브 쿼리를 사용하지 않은 단순한 SELECT 쿼리인 경우에 해당.
 	* select_type이 SIMPLE인 단위 쿼리는 반드시 하나만 존재. (일반적으로 바깥 쿼리가 그렇다.) p268-3
 * **PRIMARY**
-	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는 단위 쿼리에 해당.
+	* UNION이나 서브 쿼리가 포함된 SELECT 쿼리인 경우 가장 바깥쪽에 있는 단위 쿼리에 해당. p270-1
 	* select_type이 PRIMARY인 단위 쿼리는 반드시 하나만 존재
 * **UNION**
 	* UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당. p270-1
-	* 
 * **DEPENDENT UNION**
+	* 
 * **UNION RESULT**
 * **SUBQUERY**
 * **DEPENDENT SUBQUERY**
@@ -71,7 +71,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxMzM1ODMyOTYsMTA0NjQ4ODcwNiwtMT
-MxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1
-NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMT
+M3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1
+MDU0LC0xODM5Mzc2NDIwXX0=
 -->
