--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -62,7 +62,8 @@ LIMIT 10;
 * **UNION**
 	* UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당. p270-1
 * **DEPENDENT UNION**
-	* 
+	* select_type이 UNION과 마찬가지로 UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당.
+	* 외곽 쿼리에 의존적이다.
 * **UNION RESULT**
 * **SUBQUERY**
 * **DEPENDENT SUBQUERY**
@@ -71,7 +72,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMT
-M3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1
-MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTE1MjUwNDEwNiw2ODYyMzM0MDksMTA0Nj
+Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
+NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
