RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -62,9 +62,10 @@ LIMIT 10;
 * **UNION**
 	* UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당. p270-1
 * **DEPENDENT UNION**
-	* select_type이 UNION과 마찬가지로 UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당.
-	* 외곽 쿼리에 의존적이다.
+	* select_type이 UNION과 마찬가지로 UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당. p271-1
+	* UNION이나 UNION ALL로 결합된 단위 쿼리가 외부의 영향을 받는 경우.
 * **UNION RESULT**
+	* 
 * **SUBQUERY**
 * **DEPENDENT SUBQUERY**
 * **DERIVED**
@@ -72,7 +73,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1MjUwNDEwNiw2ODYyMzM0MDksMTA0Nj
+eyJoaXN0b3J5IjpbMjAxNzk3MDUxOCw2ODYyMzM0MDksMTA0Nj
 Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
 NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
