--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -64,8 +64,9 @@ LIMIT 10;
 * **DEPENDENT UNION**
 	* select_type이 UNION과 마찬가지로 UNION으로 결합하는 단위 SELECT 쿼리 가운데 첫 번째를 제외한 두 번째 이후 단위 SELECT 쿼리인 경우에 해당. p271-1
 	* UNION이나 UNION ALL로 결합된 단위 쿼리가 외부의 영향을 받는 경우.
-	* DEPENDENT 키워드를 포함하는 서브 쿼리는 외부 쿼리에 의존적이기 때문에 절대 외부 쿼리보다 먼저 실행 될 수 없다. 대부분 빟
+	* DEPENDENT 키워드를 포함하는 서브 쿼리는 외부 쿼리에 의존적이기 때문에 절대 외부 쿼리보다 먼저 실행 될 수 없다. 대부분 비효율적인 경우가 많다.
 * **UNION RESULT**
+	* UNION 결과를 담아두는 테이블을 의미
 	* 
 * **SUBQUERY**
 * **DEPENDENT SUBQUERY**
@@ -74,7 +75,7 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4OTM5NTQ2ODYsNjg2MjMzNDA5LDEwND
+eyJoaXN0b3J5IjpbLTIwODY1NTk4MzYsNjg2MjMzNDA5LDEwND
 Y0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3
 Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
