--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -67,15 +67,16 @@ LIMIT 10;
 	* DEPENDENT 키워드를 포함하는 서브 쿼리는 외부 쿼리에 의존적이기 때문에 절대 외부 쿼리보다 먼저 실행 될 수 없다. 대부분 비효율적인 경우가 많다.
 * **UNION RESULT**
 	* UNION 결과를 담아두는 테이블을 의미
-	* 
+	* 실제 쿼리에서 단위 쿼리가 아니기 때문에 id 값은 부여되지 않는다.
 * **SUBQUERY**
+	* 
 * **DEPENDENT SUBQUERY**
 * **DERIVED**
 * **UNCACHABLE SUBQUERY**
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwODY1NTk4MzYsNjg2MjMzNDA5LDEwND
-Y0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3
-Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
+Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
+NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
