RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -66,17 +66,19 @@ LIMIT 10;
 	* UNION이나 UNION ALL로 결합된 단위 쿼리가 외부의 영향을 받는 경우.
 	* DEPENDENT 키워드를 포함하는 서브 쿼리는 외부 쿼리에 의존적이기 때문에 절대 외부 쿼리보다 먼저 실행 될 수 없다. 대부분 비효율적인 경우가 많다.
 * **UNION RESULT**
-	* UNION 결과를 담아두는 테이블을 의미
+	* UNION 결과를 담아두는 테이블을 의미. p272-1
 	* 실제 쿼리에서 단위 쿼리가 아니기 때문에 id 값은 부여되지 않는다.
 * **SUBQUERY**
-	* 
+	* FROM 절 이외에서 사용되는 서브 쿼리를 의미. p2
 * **DEPENDENT SUBQUERY**
 * **DERIVED**
+	* FROM 절에 사용된 서브 쿼리를 의미
 * **UNCACHABLE SUBQUERY**
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
-Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
-NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbLTE5ODg0MjIyODgsLTc3NzkzMDcyNyw2OD
+YyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1
+NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0Mj
+BdfQ==
 -->
