RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -69,16 +69,17 @@ LIMIT 10;
 	* UNION 결과를 담아두는 테이블을 의미. p272-1
 	* 실제 쿼리에서 단위 쿼리가 아니기 때문에 id 값은 부여되지 않는다.
 * **SUBQUERY**
-	* FROM 절 이외에서 사용되는 서브 쿼리를 의미. p2
+	* FROM 절 이외에서 사용되는 서브 쿼리를 의미. p273-1
 * **DEPENDENT SUBQUERY**
+	* 
 * **DERIVED**
 	* FROM 절에 사용된 서브 쿼리를 의미
 * **UNCACHABLE SUBQUERY**
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODg0MjIyODgsLTc3NzkzMDcyNyw2OD
-YyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1
-NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0Mj
-BdfQ==
+eyJoaXN0b3J5IjpbMTg1NzY3MDQxNiwtNzc3OTMwNzI3LDY4Nj
+IzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3NTU1
+MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF
+19
 -->
