RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -71,15 +71,15 @@ LIMIT 10;
 * **SUBQUERY**
 	* FROM 절 이외에서 사용되는 서브 쿼리를 의미. p273-1
 * **DEPENDENT SUBQUERY**
-	* 
+	* 서브 쿼리가 바깥쪽 SELECT 쿼리에서 정의된 칼럼을 사용하는 경우. p274-1
 * **DERIVED**
 	* FROM 절에 사용된 서브 쿼리를 의미
 * **UNCACHABLE SUBQUERY**
 * **UNCACHABLE UNION**
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1NzY3MDQxNiwtNzc3OTMwNzI3LDY4Nj
-IzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3NTU1
-MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF
-19
+eyJoaXN0b3J5IjpbLTEzNzI0NjcwMzIsMTg1NzY3MDQxNiwtNz
+c3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1
+MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NC
+wtMTgzOTM3NjQyMF19
 -->
