RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -75,11 +75,13 @@ LIMIT 10;
 * **DERIVED**
 	* FROM 절에 사용된 서브 쿼리를 의미
 * **UNCACHABLE SUBQUERY**
+	* 
 * **UNCACHABLE UNION**
+	* 
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzI0NjcwMzIsMTg1NzY3MDQxNiwtNz
-c3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1
-MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NC
-wtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbNzA4MzA5MDMyLDE4NTc2NzA0MTYsLTc3Nz
+kzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1
+NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLT
+E4MzkzNzY0MjBdfQ==
 -->
