--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -74,16 +74,17 @@ LIMIT 10;
 	* 서브 쿼리가 바깥쪽 SELECT 쿼리에서 정의된 칼럼을 사용하는 경우. p274-1
 * **DERIVED**
 	* FROM 절에 사용된 서브 쿼리를 의미
+	* 단위 SELECT 뭐이릐 실행 결과를 메모리나 디스크에 임시 테이블을 생성하는 것을 의미.(파생 테이블)
 	* MySQL은 FROM 절에 사용된 서브 쿼리를 제대로 최적화하지 못할 대가 대부분.
-	* 파
+		* 파생 테이블에는 인덱스가 없어 다른 테이블과 조인할 때 성능상 불리
 * **UNCACHABLE SUBQUERY**
 	* 
 * **UNCACHABLE UNION**
 	* 
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ0MTAxMjA3MSwxODU3NjcwNDE2LC03Nz
-c5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUw
-NTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC
-0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3Nz
+kzMDcyNyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1
+NCwtMTA3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLT
+E4MzkzNzY0MjBdfQ==
 -->
