RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -74,7 +74,7 @@ LIMIT 10;
 	* 서브 쿼리가 바깥쪽 SELECT 쿼리에서 정의된 칼럼을 사용하는 경우. p274-1
 * **DERIVED**
 	* FROM 절에 사용된 서브 쿼리를 의미
-	* 단위 SELECT  실행 결과를 메모리나 디스크에 임시 테이블을 생성하는 것을 의미.(파생 테이블)
+	* 단위 SELECT 쿼리의 실행 결과를 메모리나 디스크에 임시 테이블을 생성하는 것을 의미.(파생 테이블)
 	* MySQL은 FROM 절에 사용된 서브 쿼리를 제대로 최적화하지 못할 대가 대부분.
 		* 파생 테이블에는 인덱스가 없어 다른 테이블과 조인할 때 성능상 불리
 * **UNCACHABLE SUBQUERY**
@@ -83,7 +83,7 @@ LIMIT 10;
 	* 
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ4NjM5NDM2Niw3MjcwMjM5NjgsMTg1Nz
+eyJoaXN0b3J5IjpbMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1Nz
 Y3MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2
 LC0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMT
 k0ODU3NTA1NCwtMTgzOTM3NjQyMF19
