--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -78,13 +78,13 @@ LIMIT 10;
 	* MySQL은 FROM 절에 사용된 서브 쿼리를 제대로 최적화하지 못할 대가 대부분.
 		* 파생 테이블에는 인덱스가 없어 다른 테이블과 조인할 때 성능상 불리
 * **UNCACHABLE SUBQUERY**
-	* 
+	* 서브 쿼리에 포함된 요소에 의해 
 * **UNCACHABLE UNION**
 	* 
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ2MDE5NzUzMiw3MjcwMjM5NjgsMTg1Nz
-Y3MDQxNiwtNzc3OTMwNzI3LDY4NjIzMzQwOSwxMDQ2NDg4NzA2
-LC0xMzEzNzA1MDU0LC0xMDc3NTU1MDMxLDE5OTUzNzc3NDYsMT
-k0ODU3NTA1NCwtMTgzOTM3NjQyMF19
+eyJoaXN0b3J5IjpbMTQwMjg5MDE5MiwxNDYwMTk3NTMyLDcyNz
+AyMzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5
+LDEwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMT
+k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
