RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -81,12 +81,12 @@ LIMIT 10;
 	* 서브 쿼리에 포함된 요소에 의해 캐시가 불가능한 경우. p277-1
 		* 사용자 변수가 서브 쿼리에 사용된 경우
 		* NOT-DETERMINISTIC 속성의 스토어드 루틴이 서브 쿼리 내에 사용된 경우
-		* UUID() 나 RAND()와 가
+		* UUID() 나 RAND()와 같이 결과 값이 호출할 때마다 달라지는 함수가 사용된 경우.
 * **UNCACHABLE UNION**
 	* 
 ### 6.2.3 table 칼럼
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYzOTUxMjAzNSwxNDYwMTk3NTMyLDcyNz
+eyJoaXN0b3J5IjpbMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNz
 AyMzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5
 LDEwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMT
 k5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
