RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -85,10 +85,11 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 	* UNCACHABLE UNION 속성이 혼합된 타입 
 ### 6.2.3 table 칼럼
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMTY0MTA2NDUsMTQ5Mjc1MzcwNiwxND
-YwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2LC03Nzc5MzA3
-MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMTM3MDUwNTQsLT
-EwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1MDU0LC0xODM5
-Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbMTI5NDA2MDM3NywxNDkyNzUzNzA2LDE0Nj
+AxOTc1MzIsNzI3MDIzOTY4LDE4NTc2NzA0MTYsLTc3NzkzMDcy
+Nyw2ODYyMzM0MDksMTA0NjQ4ODcwNiwtMTMxMzcwNTA1NCwtMT
+A3NzU1NTAzMSwxOTk1Mzc3NzQ2LDE5NDg1NzUwNTQsLTE4Mzkz
+NzY0MjBdfQ==
 -->
