--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -84,12 +84,15 @@ LIMIT 10;
 * **UNCACHABLE UNION**
 	* UNCACHABLE UNION 속성이 혼합된 타입 
 ### 6.2.3 table 칼럼
-
+* 테이블의 이름에 별칭이 부여된 경우 별칭이 표시. 그렇지 않은 경우 NULL 표시.
+* <>로 둘러싸인 이름이 명시되는 경우, 임시 테이블을 의미.
+	* <>안에 표시되는 숫자는 단위 SELECT 뭐리늬 id를 지칭.
+* 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODI0OTg1MDk3LDEyOTQwNjAzNzcsMTQ5Mj
-c1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2OCwxODU3NjcwNDE2
-LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwNDY0ODg3MDYsLTEzMT
-M3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3Nzc0NiwxOTQ4NTc1
-MDU0LC0xODM5Mzc2NDIwXX0=
+eyJoaXN0b3J5IjpbLTUxMzQyNjk2Niw4MjQ5ODUwOTcsMTI5ND
+A2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4
+LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
+Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
+NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
 -->
