--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -88,9 +88,21 @@ LIMIT 10;
 * <>로 둘러싸인 이름이 명시되는 경우, 임시 테이블을 의미.
 	* <>안에 표시되는 숫자는 단위 SELECT 뭐리늬 id를 지칭.
 * 
+|id|select_type|table|type|Key|Key_len|ref|rows|Extra|
+|--|----------|-----|----|---|-------|---|----|-----|
+|1|PRIMARY|<derived2>|ALL||||10420||
+|1|PRIMARY|s|ref|PRIMARY|4|employees.e.emp_no|4||
+
+```
+EXPLAIN
+SELECT e.emp_no, e.first_name, s.from_date, s.salary
+FROM employees e, salaries s
+WHERE e.emp_no=s.emp_no
+LIMIT 10;
+```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUxMzQyNjk2Niw4MjQ5ODUwOTcsMTI5ND
+eyJoaXN0b3J5IjpbMTkyNTEwNjE2Niw4MjQ5ODUwOTcsMTI5ND
 A2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4
 LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
 Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
