--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -91,18 +91,19 @@ LIMIT 10;
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
 |1|PRIMARY|<derived2>|ALL||||10420||
-|1|PRIMARY|s|ref|PRIMARY|4|employees.e.emp_no|4||
+|1|PRIMARY|e|eq_ref|PRIMARY|4|de1.emp_no|1||
+|2|DERIVED|dept_emp|range|ix_fromdate|3||20550||
 
 ```
 EXPLAIN
-SELECT e.emp_no, e.first_name, s.from_date, s.salary
+SELECT *
 FROM employees e, salaries s
 WHERE e.emp_no=s.emp_no
 LIMIT 10;
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkyNTEwNjE2Niw4MjQ5ODUwOTcsMTI5ND
+eyJoaXN0b3J5IjpbMTY5MTMwNDA3Niw4MjQ5ODUwOTcsMTI5ND
 A2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4
 LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
 Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
