RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -87,25 +87,31 @@ LIMIT 10;
 * 테이블의 이름에 별칭이 부여된 경우 별칭이 표시. 그렇지 않은 경우 NULL 표시.
 * <>로 둘러싸인 이름이 명시되는 경우, 임시 테이블을 의미.
 	* <>안에 표시되는 숫자는 단위 SELECT 뭐리늬 id를 지칭.
-* 
+ 
 |id|select_type|table|type|Key|Key_len|ref|rows|Extra|
 |--|----------|-----|----|---|-------|---|----|-----|
 |1|PRIMARY|<derived2>|ALL||||10420||
 |1|PRIMARY|e|eq_ref|PRIMARY|4|de1.emp_no|1||
 |2|DERIVED|dept_emp|range|ix_fromdate|3||20550||
 
+* 해석
+	* ㄹㄹ
+	* 
+
+
 ```
 EXPLAIN
 SELECT *
-FROM employees e, salaries s
-WHERE e.emp_no=s.emp_no
-LIMIT 10;
+FROM
+	(SELECT de.emp_no FROM dept_emp de) tb, 
+	employees e
+WHERE e.emp_no=tb.emp_no;
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY5MTMwNDA3Niw4MjQ5ODUwOTcsMTI5ND
-A2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4
-LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
-Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
-NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbLTE0NjAyODkyMjQsODI0OTg1MDk3LDEyOT
+QwNjAzNzcsMTQ5Mjc1MzcwNiwxNDYwMTk3NTMyLDcyNzAyMzk2
+OCwxODU3NjcwNDE2LC03Nzc5MzA3MjcsNjg2MjMzNDA5LDEwND
+Y0ODg3MDYsLTEzMTM3MDUwNTQsLTEwNzc1NTUwMzEsMTk5NTM3
+Nzc0NiwxOTQ4NTc1MDU0LC0xODM5Mzc2NDIwXX0=
 -->
