RealMysql/6. 실행 계획.md updated from https://stackedit.io/

--- a/RealMysql/6. 실행 계획.md
+++ b/RealMysql/6. 실행 계획.md
@@ -95,8 +95,8 @@ LIMIT 10;
 |2|DERIVED|dept_emp|range|ix_fromdate|3||20550||
 
 * 해석
-	* ㄹㄹ
-	* 
+	* 첫 번째 라인의 테이블이 <derived2>로 보아 쿼리의 id가2번인 라인이 먼저 실행되고 그 결과 파생 테이블.
+	* 세 번째 라인의 쿼리 id 2번을 보면 select_type이 DERIVED
 
 
 ```
@@ -109,9 +109,10 @@ WHERE e.emp_no=tb.emp_no;
 ```
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNTkzODU0NCw4MjQ5ODUwOTcsMTI5ND
-A2MDM3NywxNDkyNzUzNzA2LDE0NjAxOTc1MzIsNzI3MDIzOTY4
-LDE4NTc2NzA0MTYsLTc3NzkzMDcyNyw2ODYyMzM0MDksMTA0Nj
-Q4ODcwNiwtMTMxMzcwNTA1NCwtMTA3NzU1NTAzMSwxOTk1Mzc3
-NzQ2LDE5NDg1NzUwNTQsLTE4MzkzNzY0MjBdfQ==
+eyJoaXN0b3J5IjpbMTc1NzA0OTc1NCwtMTA1OTM4NTQ0LDgyND
+k4NTA5NywxMjk0MDYwMzc3LDE0OTI3NTM3MDYsMTQ2MDE5NzUz
+Miw3MjcwMjM5NjgsMTg1NzY3MDQxNiwtNzc3OTMwNzI3LDY4Nj
+IzMzQwOSwxMDQ2NDg4NzA2LC0xMzEzNzA1MDU0LC0xMDc3NTU1
+MDMxLDE5OTUzNzc3NDYsMTk0ODU3NTA1NCwtMTgzOTM3NjQyMF
+19
 -->
